--- a/demo/html/bauen/multipage-dark/3d-modelling.html
+++ b/demo/html/bauen/multipage-dark/3d-modelling.html
@@ -34,7 +34,7 @@
         <div class="logo-wrapper valign">
             <div class="logo">
                 <a href="index.html">
-                    <img src="img/logo.png" class="logo-img" alt="">
+                    <img src="https://rula.vn/media/banner/logo_logo.png" class="logo-img" alt="">
                     <h2>BAUEN<span>INNOVATE DESIGN</span></h2>
                 </a>
             </div>
