--- a/demo/html/bauen/multipage-dark/prime-hotel.html
+++ b/demo/html/bauen/multipage-dark/prime-hotel.html
@@ -33,7 +33,7 @@
         <!-- Logo -->
         <div class="logo-wrapper valign">
             <div class="logo">
-                <a href="index.html"> <img src="img/logo.png" class="logo-img" alt="">
+                <a href="index.html"> <img src="https://rula.vn/media/banner/logo_logo.png" class="logo-img" alt="">
                     <h2>BAUEN<span>INNOVATE DESIGN</span></h2>
                 </a>
             </div>
