--- a/demo/html/bauen/multipage-dark/blog.html
+++ b/demo/html/bauen/multipage-dark/blog.html
@@ -35,7 +35,7 @@
             <div class="logo">
                 <a href="index.html">
                     <img src="https://rula.vn/media/banner/logo_logo.png" class="logo-img" alt="">
-                    <h2>BAUEN<span>INNOVATE DESIGN</span></h2>
+                    <h2>RULA<span>INNOVATE DESIGN</span></h2>
                 </a>
             </div>
         </div>
@@ -77,7 +77,7 @@
             <div class="left-panel"></div>
         </section>
         <!-- Blog  -->
-        <section class="bauen-blog section-padding2">
+        <section class="RULA-blog section-padding2">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
@@ -130,7 +130,7 @@
                 <div class="row">
                     <div class="col-md-12 text-center">
                         <!-- Pagination -->
-                        <ul class="bauen-pagination-wrap align-center mb-30 mt-30">
+                        <ul class="RULA-pagination-wrap align-center mb-30 mt-30">
                             <li><a href="blog.html#"><i class="ti-angle-left"></i></a></li>
                             <li><a href="blog.html#">1</a></li>
                             <li><a href="blog.html#" class="active">2</a></li>
@@ -158,7 +158,7 @@
                             <div class="fothead">
                                 <h6>Email</h6>
                             </div>
-                            <p>architecture@bauen.com</p>
+                            <p>architecture@RULA.com</p>
                         </div>
                     </div>
                     <div class="col-md-4 mb-30">
@@ -176,7 +176,7 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="text-left">
-                                <p>© 2021 Bauen. All right reserved.</p>
+                                <p>© 2021 RULA. All right reserved.</p>
                             </div>
                         </div>
                         <div class="col-md-4 abot">
