--- a/demo/html/bauen/multipage-dark/post3.html
+++ b/demo/html/bauen/multipage-dark/post3.html
@@ -35,7 +35,7 @@
             <div class="logo">
                 <a href="index.html">
                     <img src="https://rula.vn/media/banner/logo_logo.png" class="logo-img" alt="">
-                    <h2>BAUEN<span>INNOVATE DESIGN</span></h2>
+                    <h2>RULA<span>INNOVATE DESIGN</span></h2>
                 </a>
             </div>
         </div>
@@ -87,15 +87,15 @@
                         <p>Nulla vitae metus tincidunt, varius nunc quis, porta nulla. Pellentesque vel dui nec libero auctor pretium id sed arcu. Nunc consequat diam id nisl blandit dignissim. Etiam commodo diam dolor, at scelerisque sem finibus sit amet. Curabitur id lectus eget purus finibus laoreet. Nam eget lectus ac sem luctus hendrerit sed nec magna. Maecenas vulputate magna sed nunc pellentesque, in consectetur nisi condimentum.</p>
                     </div>
                 </div>
-                <div class="bauen-comment-section">
+                <div class="RULA-comment-section">
                     <div class="row">
                         <!-- Comment -->
                         <div class="col-md-7">
-                            <div class="bauen-post-comment-wrap">
-                                <div class="bauen-user-comment"> <img src="img/team/3.jpg" alt=""> </div>
-                                <div class="bauen-user-content">
+                            <div class="RULA-post-comment-wrap">
+                                <div class="RULA-user-comment"> <img src="img/team/3.jpg" alt=""> </div>
+                                <div class="RULA-user-content">
                                     <h3>Martin Misse<span> 29 October 2021</span></h3>
-                                    <p>Photography ultricies nibh non dolor maximus sceleue inte molliser faubs neque nec tincidunte aliquam erat volutpat. Praeser tempor malade yap. </p> <a class="bauen-repay" href="#">Reply<i class="ti-back-left"></i></a>
+                                    <p>Photography ultricies nibh non dolor maximus sceleue inte molliser faubs neque nec tincidunte aliquam erat volutpat. Praeser tempor malade yap. </p> <a class="RULA-repay" href="#">Reply<i class="ti-back-left"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -138,7 +138,7 @@
                             <div class="fothead">
                                 <h6>Email</h6>
                             </div>
-                            <p>architecture@bauen.com</p>
+                            <p>architecture@RULA.com</p>
                         </div>
                     </div>
                     <div class="col-md-4 mb-30">
@@ -156,7 +156,7 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="text-left">
-                                <p>© 2021 Bauen. All right reserved.</p>
+                                <p>© 2021 RULA. All right reserved.</p>
                             </div>
                         </div>
                         <div class="col-md-4 abot">
