--- a/demo/html/bauen/multipage-dark/contact.html
+++ b/demo/html/bauen/multipage-dark/contact.html
@@ -35,7 +35,7 @@
             <div class="logo">
                 <a href="index.html">
                     <img src="https://rula.vn/media/banner/logo_logo.png" class="logo-img" alt="">
-                    <h2>BAUEN<span>INNOVATE DESIGN</span></h2>
+                    <h2>RULA<span>INNOVATE DESIGN</span></h2>
                 </a>
             </div>
         </div>
@@ -86,14 +86,14 @@
                 </div>
                 <div class="row mb-90">
                     <div class="col-md-4 mb-30 animate-box" data-animate-effect="fadeInUp">
-                        <p><b>Bauen Architecture Firm</b></p>
-                        <p>Our firm nisl sodales sit amet sapien idea placerat sodales orcite. Vivamus ne miss rhoncus felis bauen architecture.</p>
+                        <p><b>RULA Architecture Firm</b></p>
+                        <p>Our firm nisl sodales sit amet sapien idea placerat sodales orcite. Vivamus ne miss rhoncus felis RULA architecture.</p>
                         <p><b>VAT :</b> USA002323065B06</p>
                     </div>
                     <div class="col-md-4 mb-30 animate-box" data-animate-effect="fadeInUp">
                         <p><b>Contact Details</b></p>
                         <p><b>Phone :</b> +1 203-123-0606</p>
-                        <p><b>Email :</b> architecture@bauen.com</p>
+                        <p><b>Email :</b> architecture@RULA.com</p>
                         <p><b>Address :</b> 24 King St, Charleston, 29401 USA</p>
                     </div>
                     <div class="col-md-4 animate-box" data-animate-effect="fadeInUp">
@@ -117,7 +117,7 @@
                 <!-- Map Section-->
                 <div class="row">
                     <div class="col-md-12 mb-30 animate-box" data-animate-effect="fadeInUp">
-                        <div id="bauen-contactMap"></div>
+                        <div id="RULA-contactMap"></div>
                     </div>
                 </div>
             </div>
@@ -239,7 +239,7 @@
                             <div class="fothead">
                                 <h6>Email</h6>
                             </div>
-                            <p>architecture@bauen.com</p>
+                            <p>architecture@RULA.com</p>
                         </div>
                     </div>
                     <div class="col-md-4 mb-30">
@@ -257,7 +257,7 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="text-left">
-                                <p>© 2021 Bauen. All right reserved.</p>
+                                <p>© 2021 RULA. All right reserved.</p>
                             </div>
                         </div>
                         <div class="col-md-4 abot">
