--- a/demo/html/bauen/multipage-dark/index.html
+++ b/demo/html/bauen/multipage-dark/index.html
@@ -35,7 +35,7 @@
             <div class="logo">
                 <a href="index.html"> 
                     <img src="https://rula.vn/media/banner/logo_logo.png" class="logo-img" alt="">
-                    <h2>BAUEN<span>INNOVATE DESIGN</span></h2>
+                    <h2>RULA<span>INNOVATE DESIGN</span></h2>
                 </a>
             </div>
         </div>
@@ -128,7 +128,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 mb-30 animate-box" data-animate-effect="fadeInUp">
-                        <h2 class="section-title">About <span>Bauen</span></h2>
+                        <h2 class="section-title">About <span>RULA</span></h2>
                         <p>Architecture viverra tristique justo duis vitae diam neque nivamus aestan ateuene artines aringianu atelit finibus viverra nec lacus. Nedana theme erodino setlie suscipe no curabit tristique.</p>
                         <p>Design inilla duiman at elit finibus viverra nec a lacus themo the drudea seneoice misuscipit non sagie the fermen.</p>
                         <p>Planner inilla duiman at elit finibus viverra nec a lacus themo the drudea seneoice misuscipit non sagie the fermen. Viverra tristique jusio the ivite dianne onen nivami acsestion augue artine.</p>
@@ -233,7 +233,7 @@
             </div>
         </section>
         <!-- Blog -->
-        <section class="bauen-blog section-padding">
+        <section class="RULA-blog section-padding">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
@@ -394,7 +394,7 @@
                             <div class="fothead">
                                 <h6>Email</h6>
                             </div>
-                            <p>architecture@bauen.com</p>
+                            <p>architecture@RULA.com</p>
                         </div>
                     </div>
                     <div class="col-md-4 mb-30">
@@ -412,7 +412,7 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="text-left">
-                                <p>© 2021 Bauen. All right reserved.</p>
+                                <p>© 2021 RULA. All right reserved.</p>
                             </div>
                         </div>
                         <div class="col-md-4 abot">
