--- a/demo/html/bauen/multipage-dark/video-gallery.html
+++ b/demo/html/bauen/multipage-dark/video-gallery.html
@@ -33,7 +33,7 @@
         <div class="logo-wrapper valign">
             <div class="logo">
                 <a href="index.html"> <img src="https://rula.vn/media/banner/logo_logo.png" class="logo-img" alt="">
-                    <h2>BAUEN<span>INNOVATE DESIGN</span></h2> </a>
+                    <h2>RULA<span>INNOVATE DESIGN</span></h2> </a>
             </div>
         </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="icon-bar"><i class="ti-line-double"></i></span> </button>
@@ -162,7 +162,7 @@
                         <div class="item fotcont">
                             <div class="fothead">
                                 <h6>Email</h6> </div>
-                            <p>architecture@bauen.com</p>
+                            <p>architecture@RULA.com</p>
                         </div>
                     </div>
                     <div class="col-md-4 mb-30">
@@ -179,7 +179,7 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="text-left">
-                                <p>© 2021 Bauen. All right reserved.</p>
+                                <p>© 2021 RULA. All right reserved.</p>
                             </div>
                         </div>
                         <div class="col-md-4 abot">
