--- a/demo/html/bauen/multipage-dark/index.html
+++ b/demo/html/bauen/multipage-dark/index.html
@@ -45,7 +45,7 @@
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item"><a class="nav-link active" href="index.html">Trang chủ</a></li>
                 <li class="nav-item"><a class="nav-link" href="about.html">Về Rula</a></li>
-                <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+                <li class="nav-item"><a class="nav-link" href="services.html">Dịch vụ</a></li>
                 <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
                 <li class="nav-item dropdown"> <span class="nav-link"> Pages <i class="ti-angle-down"></i></span>
                     <ul class="dropdown-menu last">
