--- a/demo/html/bauen/multipage-dark/video-gallery.html
+++ b/demo/html/bauen/multipage-dark/video-gallery.html
@@ -33,7 +33,7 @@
         <div class="logo-wrapper valign">
             <div class="logo">
                 <a href="index.html"> <img src="https://rula.vn/media/banner/logo_logo.png" class="logo-img" alt="">
-                    <h2>RULA<span>INNOVATE DESIGN</span></h2> </a>
+                    <h2>RULA<span>ARCHITECTS · CONSTRUCTS</span></h2> </a>
             </div>
         </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="icon-bar"><i class="ti-line-double"></i></span> </button>
