--- a/demo/html/bauen/multipage-dark/interior-design.html
+++ b/demo/html/bauen/multipage-dark/interior-design.html
@@ -34,7 +34,7 @@
         <div class="logo-wrapper valign">
             <div class="logo">
                 <a href="index.html"> <img src="https://rula.vn/media/banner/logo_logo.png" class="logo-img" alt="">
-                    <h2>RULA<span>INNOVATE DESIGN</span></h2>
+                    <h2>RULA<span>ARCHITECTS · CONSTRUCTS</span></h2>
                 </a>
             </div>
         </div>
