--- a/demo/html/bauen/multipage-dark/index.html
+++ b/demo/html/bauen/multipage-dark/index.html
@@ -33,7 +33,7 @@
         <!-- Logo -->
         <div class="logo-wrapper valign">
             <div class="logo">
-                <a href="index.html"> 
+                <a href="index.html">
                     <img src="https://rula.vn/media/banner/logo_logo.png" class="logo-img" alt="">
                     <h2>RULA<span>ARCHITECTS · CONSTRUCTS</span></h2>
                 </a>
@@ -67,15 +67,15 @@
     <header class="header slider-fade">
         <div class="owl-carousel owl-theme">
             <!-- The opacity on the image is made with "data-overlay-dark="number". You can change it using the numbers 0-9. -->
-            <div class="text-right item bg-img" data-overlay-dark="3" data-background="img/slider/1.jpg">
+            <div class="text-right item bg-img" data-overlay-dark="3" data-background="/img/main_visual.jpg">
                 <div class="v-middle caption mt-30">
                     <div class="container">
                         <div class="row">
                             <div class="col-md-7 offset-md-5">
                                 <div class="o-hidden">
-                                    <h1>Innovate Desing in Toronto</h1>
-                                    <p>Architecture viverra tellus nec massa dictum the euismoe.
-                                        <br>Curabitur viverra the posuere aukue velit.
+                                    <h1>ARCHITECTS & CONSTRUCTS</h1>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                        <br>Lorem Ipsum is simply typesetting industry.
                                     </p>
                                     <div class="butn-light mt-30 mb-30"><a href="#0"><span>Discover</span></a></div>
                                 </div>
@@ -90,9 +90,9 @@
                         <div class="row">
                             <div class="col-md-7 offset-md-5">
                                 <div class="o-hidden">
-                                    <h1>Innovate Desing in Canada</h1>
-                                    <p>Architecture viverra tellus nec massa dictum the euismoe.
-                                        <br>Curabitur viverra the posuere aukue velit.
+                                    <h1>ARCHITECTS & CONSTRUCTS</h1>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                        <br>Lorem Ipsum is simply typesetting industry.
                                     </p>
                                     <div class="butn-light mt-30 mb-30"><a href="#0"><span>Discover</span></a></div>
                                 </div>
@@ -245,7 +245,7 @@
                         <div class="owl-carousel owl-theme">
                             <div class="item">
                                 <div class="position-re o-hidden"> <img src="img/slider/1.jpg" alt=""> </div>
-                                <div class="con"> 
+                                <div class="con">
                                     <span class="category">
                                         <a href="blog.html">Architecture </a> -  20.12.2021
                                     </span>
