--- a/demo/html/bauen/multipage-dark/index.html
+++ b/demo/html/bauen/multipage-dark/index.html
@@ -135,7 +135,7 @@
                     </div>
                     <div class="col-md-6 animate-box" data-animate-effect="fadeInUp">
                         <div class="about-img">
-                            <div class="img"> <img src="/our team .jpg" class="img-fluid" alt=""> </div>
+                            <div class="img"> <img src="/our-team.jpg" class="img-fluid" alt=""> </div>
                             <div class="about-img-2 about-buro">Rula Team</div>
                         </div>
                     </div>
