--- a/demo/html/bauen/multipage-dark/index.html
+++ b/demo/html/bauen/multipage-dark/index.html
@@ -147,7 +147,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2 class="section-title">Our <span>Projects</span></h2>
+                        <h2 class="section-title">Dự án <span>nổi bật</span></h2>
                     </div>
                 </div>
                 <div class="row">
