--- a/demo/html/bauen/multipage-dark/index.html
+++ b/demo/html/bauen/multipage-dark/index.html
@@ -237,43 +237,43 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2 class="section-title">Current <span>News</span></h2>
+                        <h2 class="section-title">Tin tức <span>mới nhất</span></h2>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-12">
                         <div class="owl-carousel owl-theme">
                             <div class="item">
-                                <div class="position-re o-hidden"> <img src="img/slider/1.jpg" alt=""> </div>
+                                <div class="position-re o-hidden"> <img src="/img/new1.jpg" alt=""> </div>
                                 <div class="con">
                                     <span class="category">
-                                        <a href="blog.html">Architecture </a> -  20.12.2021
+                                        <a href="blog.html">Kiến trúc</a> -  20.12.2021
                                     </span>
-                                    <h5><a href="post.html">Modern Architectural Structures</a></h5>
+                                    <h5><a href="post.html">Thiết kế phòng net</a></h5>
                                 </div>
                             </div>
                             <div class="item">
-                                <div class="position-re o-hidden"> <img src="img/slider/2.jpg" alt=""> </div>
+                                <div class="position-re o-hidden"> <img src="/img/new2.jpg" alt=""> </div>
                                 <div class="con"> <span class="category">
-                                        <a href="blog.html">Interior</a> - 18.12.2021
+                                        <a href="blog.html">Nội thất</a> - 18.12.2021
                                     </span>
-                                    <h5><a href="post.html">Modernism in Architecture</a></h5>
+                                    <h5><a href="post.html">Nội thất chung cư</a></h5>
                                 </div>
                             </div>
                             <div class="item">
-                                <div class="position-re o-hidden"> <img src="img/slider/3.jpg" alt=""> </div>
+                                <div class="position-re o-hidden"> <img src="/img/new3.jpg" alt=""> </div>
                                 <div class="con"> <span class="category">
-                                        <a href="blog.html">Urban</a> - 16.12.2021
+                                        <a href="blog.html">Kiến trúc</a> - 16.12.2021
                                     </span>
-                                    <h5><a href="post.html">Postmodern Architecture</a></h5>
+                                    <h5><a href="post.html">Thiết kế nhà hàng</a></h5>
                                 </div>
                             </div>
                             <div class="item">
-                            <div class="position-re o-hidden"> <img src="img/slider/4.jpg" alt=""> </div>
+                            <div class="position-re o-hidden"> <img src="/img/new4.jpg" alt=""> </div>
                             <div class="con"> <span class="category">
-                                    <a href="blog.html">Planing</a> - 14.12.2021
+                                    <a href="blog.html">Bảng giá</a> - 14.12.2021
                                 </span>
-                                <h5><a href="post.html">Modern Architecture Buildings</a></h5>
+                                <h5><a href="post.html">Bảng giá thiết kế</a></h5>
                             </div>
                         </div>
                         </div>
