Phan hoi khach hang

--- a/demo/html/bauen/multipage-dark/index.html
+++ b/demo/html/bauen/multipage-dark/index.html
@@ -290,7 +290,7 @@
                         <div class="col-md-6">
                             <div class="vid-area">
                                 <div class="vid-icon">
-                                    <a class="play-button vid" href="https://youtu.be/RziCmLzpFNY">
+                                    <a class="play-button vid" href="https://www.youtube.com/watch?v=yBPcREHyNmk">
                                         <svg class="circle-fill">
                                             <circle cx="43" cy="43" r="39" stroke="#fff" stroke-width=".5"></circle>
                                         </svg>
@@ -301,7 +301,7 @@
                                         </span> </a>
                                 </div>
                                 <div class="cont mt-15 mb-30">
-                                    <h5>View promo video</h5>
+                                    <h5>Xem video</h5>
                                 </div>
                             </div>
                         </div>
@@ -309,37 +309,37 @@
                         <div class="col-md-5 offset-md-1">
                             <div class="testimonials-box animate-box" data-animate-effect="fadeInUp">
                                 <div class="head-box">
-                                    <h4>What Client's Say?</h4>
+                                    <h4>Phản hồi của khách hàng</h4>
                                 </div>
                                 <div class="owl-carousel owl-theme">
                                     <div class="item"> <span class="quote"><img src="img/quot.png" alt=""></span>
-                                        <p>Architect dapibus augue metus the nec feugiat erat hendrerit nec. Duis ve ante the lemon sanleo nec feugiat erat hendrerit necuis ve ante.</p>
+                                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                                         <div class="info">
                                             <div class="author-img"> <img src="img/team/1.jpg" alt=""> </div>
                                             <div class="cont">
-                                                <h6>Jason Brown</h6> <span>Crowne Plaza Owner</span>
+                                                <h6>Lorem Ipsum</h6> <span>ABC</span>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="item"> <span class="quote">
                                             <img src="img/quot.png" alt="">
                                         </span>
-                                        <p>Interior dapibus augue metus the nec feugiat erat hendrerit nec. Duis ve ante the lemon sanleo nec feugiat erat hendrerit necuis ve ante.</p>
+                                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                                         <div class="info">
                                             <div class="author-img"> <img src="img/team/2.jpg" alt=""> </div>
                                             <div class="cont">
-                                                <h6>Emily White</h6> <span>Armada Owner</span>
+                                                <h6>Lorem Ipsum</h6> <span>ABC</span>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="item"> <span class="quote">
                                             <img src="img/quot.png" alt="">
                                         </span>
-                                        <p>Urban dapibus augue metus the nec feugiat erat hendrerit nec. Duis ve ante the lemon sanleo nec feugiat erat hendrerit necuis ve ante.</p>
+                                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                                         <div class="info">
                                             <div class="author-img"> <img src="img/team/4.jpg" alt=""> </div>
                                             <div class="cont">
-                                                <h6>Jesica Smith</h6> <span>Alsa Manager</span>
+                                                <h6>Lorem Ipsum</h6> <span>ABC</span>
                                             </div>
                                         </div>
                                     </div>
