--- a/demo/html/bauen/multipage-dark/about.html
+++ b/demo/html/bauen/multipage-dark/about.html
@@ -80,15 +80,15 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 mb-30 animate-box" data-animate-effect="fadeInUp">
-                        <h2 class="section-title">Về Rula <span>RULA</span></h2>
-                        <p>Architecture viverra tristique justo duis vitae diam neque nivamus aestan ateuene artines aringianu atelit finibus viverra nec lacus. Nedana theme erodino setlie suscipe no curabit tristique.</p>
-                        <p>Design inilla duiman at elit finibus viverra nec a lacus themo the drudea seneoice misuscipit non sagie the fermen.</p>
-                        <p>Planner inilla duiman at elit finibus viverra nec a lacus themo the drudea seneoice misuscipit non sagie the fermen.</p>
+                        <h2 class="section-title">Về<span>RULA</span></h2>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        <p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                        <p>It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
                     </div>
                     <div class="col-md-6 animate-box" data-animate-effect="fadeInUp">
                         <div class="about-img">
-                            <div class="img"> <img src="img/about.jpg" class="img-fluid" alt=""> </div>
-                            <div class="about-img-2 about-buro">Canada Office</div>
+                            <div class="img"> <img src="/img/our-team.jpg" class="img-fluid" alt=""> </div>
+                            <div class="about-img-2 about-buro">Rula Team</div>
                         </div>
                     </div>
                 </div>
@@ -99,7 +99,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2 class="section-title">Our <span>Team</span></h2>
+                        <h2 class="section-title">Rula <span>Team</span></h2>
                     </div>
                 </div>
                 <div class="row">
@@ -107,11 +107,11 @@
                         <div class="item">
                             <div class="img"> <img src="img/team/1.jpg" alt=""> </div>
                             <div class="info">
-                                <h6>Jason Brown</h6>
-                                <p>Architect</p>
+                                <h6>Lorem Ipsum</h6>
+                                <p>Giám đốc</p>
                                 <div class="social valign">
                                     <div class="full-width">
-                                        <p>dipl. Arch ETH/SIA</p> <a href="#"><i class="ti-facebook"></i></a> <a href="#"><i class="ti-twitter-alt"></i></a> <a href="#"><i class="ti-instagram"></i></a>
+                                        <p>Liên hệ ngay</p> <a href="#"><i class="ti-facebook"></i></a> <a href="#"><i class="ti-twitter-alt"></i></a> <a href="#"><i class="ti-instagram"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -119,11 +119,11 @@
                         <div class="item">
                             <div class="img"> <img src="img/team/2.jpg" alt=""> </div>
                             <div class="info">
-                                <h6>Emily White</h6>
-                                <p>Architect</p>
+                                <h6>Lorem Ipsum</h6>
+                                <p>Phó Giám đốc</p>
                                 <div class="social valign">
                                     <div class="full-width">
-                                        <p>dipl. Arch FH</p> <a href="#"><i class="ti-facebook"></i></a> <a href="#"><i class="ti-twitter-alt"></i></a> <a href="#"><i class="ti-instagram"></i></a>
+                                        <p>Liên hệ ngay</p> <a href="#"><i class="ti-facebook"></i></a> <a href="#"><i class="ti-twitter-alt"></i></a> <a href="#"><i class="ti-instagram"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -131,11 +131,11 @@
                         <div class="item">
                             <div class="img"> <img src="img/team/3.jpg" alt=""> </div>
                             <div class="info">
-                                <h6>Enrico Samara</h6>
-                                <p>Architect</p>
+                                <h6>Lorem Ipsum</h6>
+                                <p>Kiến trúc sư</p>
                                 <div class="social valign">
                                     <div class="full-width">
-                                        <p>M.A. FH in Architecture</p> <a href="#"><i class="ti-facebook"></i></a> <a href="#"><i class="ti-twitter-alt"></i></a> <a href="#"><i class="ti-instagram"></i></a>
+                                        <p>Liên hệ ngay</p> <a href="#"><i class="ti-facebook"></i></a> <a href="#"><i class="ti-twitter-alt"></i></a> <a href="#"><i class="ti-instagram"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -143,11 +143,11 @@
                         <div class="item">
                             <div class="img"> <img src="img/team/4.jpg" alt=""> </div>
                             <div class="info">
-                                <h6>Jesica Smith</h6>
-                                <p>Architect</p>
+                                <h6>Lorem Ipsum</h6>
+                                <p>Kiến trúc sư</p>
                                 <div class="social valign">
                                     <div class="full-width">
-                                        <p>M.A. FH in Architecture</p> <a href="#"><i class="ti-facebook"></i></a> <a href="#"><i class="ti-twitter-alt"></i></a> <a href="#"><i class="ti-instagram"></i></a>
+                                        <p>Liên hệ ngay</p> <a href="#"><i class="ti-facebook"></i></a> <a href="#"><i class="ti-twitter-alt"></i></a> <a href="#"><i class="ti-instagram"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -158,14 +158,14 @@
         </section>
         <!-- Promo video - Testiominals -->
         <section class="testimonials">
-            <div class="background bg-img bg-fixed section-padding pb-0" data-background="img/banner2.jpg" data-overlay-dark="3">
+            <div class="background bg-img bg-fixed section-padding pb-0" data-background="/img/video.jpg" data-overlay-dark="3">
                 <div class="container">
                     <div class="row">
                         <!-- Promo video -->
                         <div class="col-md-6">
                             <div class="vid-area">
                                 <div class="vid-icon">
-                                    <a class="play-button vid" href="https://youtu.be/RziCmLzpFNY">
+                                    <a class="play-button vid" href="https://www.youtube.com/watch?v=yBPcREHyNmk">
                                         <svg class="circle-fill">
                                             <circle cx="43" cy="43" r="39" stroke="#fff" stroke-width=".5"></circle>
                                         </svg>
@@ -176,7 +176,7 @@
                                         </span> </a>
                                 </div>
                                 <div class="cont mt-15 mb-30">
-                                    <h5>View promo video</h5>
+                                    <h5>Xem video</h5>
                                 </div>
                             </div>
                         </div>
@@ -184,37 +184,37 @@
                         <div class="col-md-5 offset-md-1">
                             <div class="testimonials-box animate-box" data-animate-effect="fadeInUp">
                                 <div class="head-box">
-                                    <h4>What Client's Say?</h4>
+                                    <h4>PHẢN HỒI CỦA KHÁCH HÀNG</h4>
                                 </div>
                                 <div class="owl-carousel owl-theme">
                                     <div class="item"> <span class="quote"><img src="img/quot.png" alt=""></span>
-                                        <p>Architect dapibus augue metus the nec feugiat erat hendrerit nec. Duis ve ante the lemon sanleo nec feugiat erat hendrerit necuis ve ante.</p>
+                                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                                         <div class="info">
                                             <div class="author-img"> <img src="img/team/1.jpg" alt=""> </div>
                                             <div class="cont">
-                                                <h6>Jason Brown</h6> <span>Crowne Plaza Owner</span>
+                                                <h6>Lorem Ipsum</h6> <span>ABC</span>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="item"> <span class="quote">
                                             <img src="img/quot.png" alt="">
                                         </span>
-                                        <p>Interior dapibus augue metus the nec feugiat erat hendrerit nec. Duis ve ante the lemon sanleo nec feugiat erat hendrerit necuis ve ante.</p>
+                                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                                         <div class="info">
                                             <div class="author-img"> <img src="img/team/2.jpg" alt=""> </div>
                                             <div class="cont">
-                                                <h6>Emily White</h6> <span>Armada Owner</span>
+                                                <h6>Lorem Ipsum</h6> <span>ABC</span>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="item"> <span class="quote">
                                             <img src="img/quot.png" alt="">
                                         </span>
-                                        <p>Urban dapibus augue metus the nec feugiat erat hendrerit nec. Duis ve ante the lemon sanleo nec feugiat erat hendrerit necuis ve ante.</p>
+                                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                                         <div class="info">
                                             <div class="author-img"> <img src="img/team/4.jpg" alt=""> </div>
                                             <div class="cont">
-                                                <h6>Jesica Smith</h6> <span>Alsa Manager</span>
+                                                <h6>Lorem Ipsum</h6> <span>ABC</span>
                                             </div>
                                         </div>
                                     </div>
