--- a/demo/html/bauen/multipage-dark/armada-center.html
+++ b/demo/html/bauen/multipage-dark/armada-center.html
@@ -152,9 +152,9 @@
                     <div class="col-md-4 mb-30">
                         <div class="item fotcont">
                             <div class="fothead">
-                                <h6>Phone</h6>
+                                <h6>Hotline</h6>
                             </div>
-                            <p>+1 203-123-0606</p>
+                            <p>(+84) 974372468</p>
                         </div>
                     </div>
                     <div class="col-md-4 mb-30">
