--- a/demo/html/bauen/multipage-dark/contact.html
+++ b/demo/html/bauen/multipage-dark/contact.html
@@ -92,7 +92,7 @@
                     </div>
                     <div class="col-md-4 mb-30 animate-box" data-animate-effect="fadeInUp">
                         <p><b>Contact Details</b></p>
-                        <p><b>Phone :</b> +1 203-123-0606</p>
+                        <p><b>Hotline :</b> (+84) 974372468</p>
                         <p><b>Email :</b> architecture@RULA.com</p>
                         <p><b>Address :</b> 24 King St, Charleston, 29401 USA</p>
                     </div>
@@ -229,9 +229,9 @@
                     <div class="col-md-4 mb-30">
                         <div class="item fotcont">
                             <div class="fothead">
-                                <h6>Phone</h6>
+                                <h6>Hotline</h6>
                             </div>
-                            <p>+1 203-123-0606</p>
+                            <p>(+84) 974372468</p>
                         </div>
                     </div>
                     <div class="col-md-4 mb-30">
