--- a/demo/html/bauen/multipage-dark/video-gallery.html
+++ b/demo/html/bauen/multipage-dark/video-gallery.html
@@ -154,8 +154,8 @@
                     <div class="col-md-4 mb-30">
                         <div class="item fotcont">
                             <div class="fothead">
-                                <h6>Phone</h6> </div>
-                            <p>+1 203-123-0606</p>
+                                <h6>Hotline</h6> </div>
+                            <p>(+84) 974372468</p>
                         </div>
                     </div>
                     <div class="col-md-4 mb-30">
