--- a/demo/html/bauen/multipage-dark/blog.html
+++ b/demo/html/bauen/multipage-dark/blog.html
@@ -158,7 +158,7 @@
                             <div class="fothead">
                                 <h6>Email</h6>
                             </div>
-                            <p>architecture@RULA.com</p>
+                            <p>info@rula.com.vn</p>
                         </div>
                     </div>
                     <div class="col-md-4 mb-30">
