--- a/demo/html/bauen/multipage-dark/contact.html
+++ b/demo/html/bauen/multipage-dark/contact.html
@@ -93,7 +93,7 @@
                     <div class="col-md-4 mb-30 animate-box" data-animate-effect="fadeInUp">
                         <p><b>Contact Details</b></p>
                         <p><b>Hotline :</b> (+84) 974372468</p>
-                        <p><b>Email :</b> architecture@RULA.com</p>
+                        <p><b>Email :</b> info@rula.com.vn</p>
                         <p><b>Address :</b> 24 King St, Charleston, 29401 USA</p>
                     </div>
                     <div class="col-md-4 animate-box" data-animate-effect="fadeInUp">
@@ -239,7 +239,7 @@
                             <div class="fothead">
                                 <h6>Email</h6>
                             </div>
-                            <p>architecture@RULA.com</p>
+                            <p>info@rula.com.vn</p>
                         </div>
                     </div>
                     <div class="col-md-4 mb-30">
