Dieu khoan va bao mat

--- a/demo/html/bauen/multipage-dark/decor-plan.html
+++ b/demo/html/bauen/multipage-dark/decor-plan.html
@@ -175,7 +175,7 @@
                             </div>
                         </div>
                         <div class="col-md-4">
-                            <p class="right"><a href="#">Terms &amp; Conditions</a></p>
+                            <p class="right"><a href="#">Điều khoản &amp; Bảo mật</a></p>
                         </div>
                     </div>
                 </div>
