--- a/demo/html/bauen/multipage-dark/video-gallery.html
+++ b/demo/html/bauen/multipage-dark/video-gallery.html
@@ -186,7 +186,7 @@
                             <div class="social-icon"> <a href="index.html"><i class="ti-facebook"></i></a> <a href="index.html"><i class="ti-twitter"></i></a> <a href="index.html"><i class="ti-instagram"></i></a> <a href="index.html"><i class="ti-pinterest"></i></a> </div>
                         </div>
                         <div class="col-md-4">
-                            <p class="right"><a href="#">Terms &amp; Conditions</a></p>
+                            <p class="right"><a href="#">Điều khoản &amp; Bảo mật</a></p>
                         </div>
                     </div>
                 </div>
