--- a/demo/html/bauen/multipage-dark/services.html
+++ b/demo/html/bauen/multipage-dark/services.html
@@ -167,7 +167,7 @@
                                         </span> </a>
                                 </div>
                                 <div class="cont mt-15 mb-30">
-                                    <h5>View promo video</h5>
+                                    <h5>Xem video</h5>
                                 </div>
                             </div>
                         </div>
