--- a/demo/html/bauen/multipage-dark/pricing.html
+++ b/demo/html/bauen/multipage-dark/pricing.html
@@ -142,7 +142,7 @@
                         <div class="col-md-6">
                             <div class="vid-area">
                                 <div class="vid-icon">
-                                    <a class="play-button vid" href="https://youtu.be/RziCmLzpFNY">
+                                    <a class="play-button vid" href="https://www.youtube.com/watch?v=yBPcREHyNmk">
                                         <svg class="circle-fill">
                                             <circle cx="43" cy="43" r="39" stroke="#fff" stroke-width=".5"></circle>
                                         </svg>
@@ -153,7 +153,7 @@
                                         </span> </a>
                                 </div>
                                 <div class="cont mt-15 mb-30">
-                                    <h5>View promo video</h5>
+                                    <h5>Xem video</h5>
                                 </div>
                             </div>
                         </div>
