--- a/demo/html/bauen/multipage-dark/video-gallery.html
+++ b/demo/html/bauen/multipage-dark/video-gallery.html
@@ -91,7 +91,7 @@
                     <div class="col-md-6">
                         <div class="vid-area mb-30">
                             <div class="vid-icon"> <img src="img/slider/1.jpg" alt="YouTube">
-                                <a class="video-gallery-button vid" href="https://youtu.be/RziCmLzpFNY"> 
+                                <a class="video-gallery-button vid" href="https://www.youtube.com/watch?v=yBPcREHyNmk"> 
                                     <span class="video-gallery-polygon">
                                         <i class="ti-control-play"></i>
                                     </span> 
@@ -114,7 +114,7 @@
                     <div class="col-md-4">
                         <div class="vid-area mb-30">
                             <div class="vid-icon"> <img src="img/slider/3.jpg" alt="YouTube">
-                                <a class="video-gallery-button vid" href="https://youtu.be/RziCmLzpFNY"> 
+                                <a class="video-gallery-button vid" href="https://www.youtube.com/watch?v=yBPcREHyNmk"> 
                                     <span class="video-gallery-polygon">
                                         <i class="ti-control-play"></i>
                                     </span> 
@@ -125,7 +125,7 @@
                     <div class="col-md-4">
                         <div class="vid-area mb-30">
                             <div class="vid-icon"> <img src="img/slider/4.jpg" alt="YouTube">
-                                <a class="video-gallery-button vid" href="https://youtu.be/RziCmLzpFNY"> 
+                                <a class="video-gallery-button vid" href="https://www.youtube.com/watch?v=yBPcREHyNmk"> 
                                     <span class="video-gallery-polygon">
                                         <i class="ti-control-play"></i>
                                     </span> 
@@ -136,7 +136,7 @@
                     <div class="col-md-4">
                         <div class="vid-area mb-30">
                             <div class="vid-icon"> <img src="img/slider/1.jpg" alt="YouTube">
-                                <a class="video-gallery-button vid" href="https://youtu.be/RziCmLzpFNY"> 
+                                <a class="video-gallery-button vid" href="https://www.youtube.com/watch?v=yBPcREHyNmk"> 
                                     <span class="video-gallery-polygon">
                                         <i class="ti-control-play"></i>
                                     </span> 
